new portfolio entry

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <section id="hero" class="d-flex flex-column align-items-center justify-content-center">
     <div class="sliding-background">
     </div>
-    <img src="assets/img/me-pixelart.png" class="front">
+    <img src="assets/img/top-img.png" class="front">
     <h1>Hi, I'm Astrid Avalin!</h1>
     <h2>Software Engineer - Full-Stack Developer - Pixel Artist</h2>
     <a href="#about" class="front btn-get-started scrollto"><i class="icofont-simple-down"></i></a>
@@ -478,6 +478,16 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-xr filter-other">
+            <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal7">
+              <img src="assets/img/portfolio/portfolio-7.png" class="img-fluid rounded" alt="">
+              <div class="portfolio-info">
+                <h4>Small A-Frame Project Showcase</h4>
+                <p>Elective project with VR in the browser</p>
+              </div>
+            </div>
+          </div>
+
         </div>
 
       </div>
@@ -778,10 +788,36 @@
         </div>
     </div>
 
+     <!-- Portfolio Modal 7-->
+     <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-labelledby="portfolioModal7Label" aria-hidden="true">
+      <div class="modal-dialog modal-xl" role="document">
+          <div class="modal-content">
+              <div class="modal-body text-center">
+                  <div class="container">
+                      <div class="row justify-content-center">
+                          <div class="col-lg-8">
+                              <!-- Portfolio Modal - Title-->
+                              <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal7Label">WebVR</h2><br/>
+
+                              <!-- Portfolio Modal - Image-->
+                              <img class="img-fluid rounded mb-5" src="assets/img/portfolio/portfolio-7.png" alt="" />
+                              <!-- Portfolio Modal - Text-->
+                              <p class="mb-5">Elective</p>
+                              <button class="btn btn-primary" data-dismiss="modal">
+                                  <i class="fas fa-times fa-fw"></i>
+                                  Close Window
+                              </button>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>    
     
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Astrid Avalin Sørensen 2020</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Astrid Avalin Sørensen 2020</span></strong>. All Rights Reserved.
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
