--- a/index.html
+++ b/index.html
@@ -802,7 +802,9 @@
                               <!-- Portfolio Modal - Image-->
                               <img class="img-fluid rounded mb-5" src="assets/img/portfolio/portfolio-7.png" alt="" />
                               <!-- Portfolio Modal - Text-->
-                              <p class="mb-5">Elective</p>
+                              <p class="mb-5">Elective                    
+                                <br/>Click <a href="https://github.com/Avalin/aframe_pokemon_nbfc_examples">here</a> to check out the project.
+                              </p>
                               <button class="btn btn-primary" data-dismiss="modal">
                                   <i class="fas fa-times fa-fw"></i>
                                   Close Window
