--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Modding Games</a></h4>
+              <h4 class="title"><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=601718120">Modding Games</a></h4>
               <p class="description">I have created weapons and armor for games such as Skyrim using 3Ds Max</p>
             </div>
           </div>
@@ -663,7 +663,7 @@
                                   <img class="img-fluid rounded mb-5" src="assets/img/portfolio/portfolio-2.png" alt="" />
                                   <!-- Portfolio Modal - Text-->
                                   <p class="mb-5">2D Snake was made as part of an assignment during my Software Engineering bachelor.
-                                    <br/>It is written in pure C# using Windows Forms to render the graphics. 
+                                    The purpose was for us to get comfortable with writing and using an update-loop and write the methods from scratch that usually game engines does for us. It is written in pure C# using Windows Forms to render the graphics. 
                                     <br/>Click <a href="https://github.com/Avalin/wf_snake">here</a> to check out the project.</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
                                       <i class="fas fa-times fa-fw"></i>
