--- a/index.html
+++ b/index.html
@@ -746,7 +746,8 @@
                                 <!-- Portfolio Modal - Image-->
                                 <img class="img-fluid rounded mb-5" src="assets/img/portfolio/portfolio-5.png" alt="" />
                                 <!-- Portfolio Modal - Text-->
-                                <p class="mb-5">Atari Breakout ???
+                                <p class="mb-5">A small Unity 2D game project, was an assignment I got for a job interview. 
+                                  <br/>The bricks uses programmed animations, and the levels are created with .CSV files. 
                                   <br/>Click <a href="https://github.com/Avalin/unity_atari_breakout">here</a> to check out the project.
                                 </p>
                                 <button class="btn btn-primary" data-dismiss="modal">
