--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
             </div>
           </div>
           
-          <div class="col-lg-4 col-md-6 portfolio-item filter-xr filter-other">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-other">
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal8">
               <img src="assets/img/portfolio/portfolio-8-en.png" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
@@ -753,7 +753,7 @@
                                 <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal5Label">Atari Breakout Clone</h2><br/>
 
                                 <!-- Portfolio Modal - Image-->
-                                <img class="img-fluid rounded mb-5" src="assets/img/portfolio/portfolio-5.png" alt="" />
+                                <img class="img-fluid mb-5" src="assets/img/portfolio/portfolio-5.png" alt="" />
                                 <!-- Portfolio Modal - Text-->
                                 <p class="mb-5">A small Unity 2D game project, was an assignment I got for a job interview. 
                                   <br/>The bricks uses programmed animations, and the levels are created with .CSV files. 
@@ -836,12 +836,13 @@
                       <div class="row justify-content-center">
                           <div class="col-lg-8">
                               <!-- Portfolio Modal - Title-->
-                              <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal8Label">WebVR</h2><br/>
+                              <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal8Label">Smartplan Automatic Rostering Tool</h2><br/>
 
                               <!-- Portfolio Modal - Image-->
                               <img class="img-fluid rounded mb-5" src="assets/img/portfolio/portfolio-8-en.png" alt="" />
                               <!-- Portfolio Modal - Text-->
-                              <p class="mb-5">Placeholder                    
+                              <p class="mb-5">I have created an automatic rostering tool of employees for Smartplan using Drools Rule Engine (OptaPlanner) and Java.
+                                              The project was written using IntelliJ and Eclipse and is currently in production.                    
                                 <br/>Click <a href="https://trysmartplan.com/features-in-smartplan/">here</a> to learn more about the project.
                               </p>
                               <button class="btn btn-primary" data-dismiss="modal">
