--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
               </ul>
               </p>
             </div>
-            <h3 class="resume-title">Other Work-Experiences</h3>
+            <h3 class="resume-title">Other Experiences</h3>
             <div class="resume-item">
               <h4>Waiter & Server</h4>
               <h5>2013</h5>
