--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-xr">AR/VR/XR</li>
               <li data-filter=".filter-unity">Unity</li>
-              <li data-filter=".filter-unreal">Unreal Engine</li>
+              <!--li data-filter=".filter-unreal">Unreal Engine</li-->
               <li data-filter=".filter-other">Other</li>
             </ul>
           </div>
@@ -497,7 +497,16 @@
               </div>
             </div>
           </div>
-
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-other">
+            <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal9">
+              <img src="assets/img/portfolio/portfolio-9.png" class="img-fluid rounded" alt="">
+              <div class="portfolio-info">
+                <h4>JavaScript Yatzy</h4>
+                <p>A minor assignment during my Computer Science AP degree</p>
+              </div>
+            </div>
+          </div>
         </div>
 
       </div>
@@ -844,6 +853,37 @@
                               <p class="mb-5">I have created an automatic rostering tool of employees for Smartplan using Drools Rule Engine (OptaPlanner) and Java.
                                               The project was written using IntelliJ and Eclipse and is currently in production.                    
                                 <br/>Click <a href="https://trysmartplan.com/features-in-smartplan/">here</a> to learn more about the project.
+                              </p>
+                              <button class="btn btn-primary" data-dismiss="modal">
+                                  <i class="fas fa-times fa-fw"></i>
+                                  Close Window
+                              </button>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>    
+
+    <!-- Portfolio Modal 9-->
+    <div class="portfolio-modal modal fade" id="portfolioModal9" tabindex="-1" role="dialog" aria-labelledby="portfolioModal9Label" aria-hidden="true">
+      <div class="modal-dialog modal-xl" role="document">
+          <div class="modal-content">
+              <div class="modal-body text-center">
+                  <div class="container">
+                      <div class="row justify-content-center">
+                          <div class="col-lg-8">
+                              <!-- Portfolio Modal - Title-->
+                              <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal9Label">JavaScript Yatzy</h2><br/>
+
+                              <!-- Portfolio Modal - Image-->
+                              <img class="img-fluid rounded mb-5" src="assets/img/portfolio/portfolio-9.png" alt="" />
+                              <!-- Portfolio Modal - Text-->
+                              <p class="mb-5">
+                                As part of my Computer Science degree, in order to familiarize myself with Javascript I have created a pink yatzy game. 
+                                Visualized with HTML. It was created in 2016 and I had yet to learn about responsive layouts.                  
+                                <br/>Click <a href="https://github.com/Avalin/js_yatzy">here</a> to check out the project.
                               </p>
                               <button class="btn btn-primary" data-dismiss="modal">
                                   <i class="fas fa-times fa-fw"></i>
